# nutriscode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml
src/: analyze_repo.py  languages.py
tests/: helpers.py  test_analyze_go.py  test_analyze_java.py  test_analyze_js.py  test_analyze_py.py
tests/testdata/go/: ops.go
tests/testdata/java/: Ops.java
tests/testdata/js/: component.tsx  ops.js  types.ts
tests/testdata/py/: loops.py  ops.py
